--- a/Regularization/demo.ipynb
+++ b/Regularization/demo.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "e44b518e",
    "metadata": {},
    "outputs": [
@@ -343,7 +343,7 @@
     "model2 = Sequential()\n",
     "\n",
     "model2.add(Dense(128,input_dim=2, activation=\"relu\",kernel_regularizer=keras.regularizers.l1(0.001)))\n",
-    "model2.add(Dense(128, activation=\"relu\",kernel_regularizer=keras.regularizers.l1(0.001)))\n",
+    "model2.add(Dense(128, activation=\"relu\",kernel_regularizer=keras.regularizers.l1(0.001)))     ###also there are l2\n",
     "model2.add(Dense(1,activation='sigmoid'))\n",
     "\n",
     "model2.summary()"
